# Piano-Visualiser

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gitignore  vcpkg.json
src/: audio.cpp  audio.h  main.cpp  midi.cpp  midi.h  settings.cpp  settings.h  window_state.cpp  window_state.h
src/ui/: panel.cpp  panel.h  toolbar.cpp  toolbar.h
src/visuals/: blocks.cpp  blocks.h  keyboard.cpp  keyboard.h  layout.cpp  layout.h  particles.cpp  particles.h
